fixed UI overflow and added button css

--- a/stylesheets/chatapp.css
+++ b/stylesheets/chatapp.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 #room-name {
-	font-size: 150%;
+	font-size: 100%;
 	font-weight: bold;
 }
 
@@ -42,7 +42,7 @@ h1 {
 
 #participants {
 	float: left;
-	width: 200px;
+	width: 300px;
 	height: 500px;
 	overflow: auto;
 }
@@ -52,8 +52,8 @@ h1 {
 }
 
 #input {
-	width: 95%;
-	font-size: 120%;
+	width: 85%;
+	font-size: 100%;
 }
 
 .notice {
